
       Release Notes for Bacula 2.5.16

  Bacula code: Total files = 517 Total lines = 199,415 (*.h *.c *.in)

This Director and Storage daemon must be upgraded at the same time,
but they should be compatible with all 2.4.x File daemons, unless you
use some of the new features that affect the FD.  In other words, you should
not have to upgrade all your File daemons when you upgrade. There is
no database upgrade needed from version 2.4.x.  However, the next
BETA release will require a database upgrade.

==================   Warning !!!!!! ==========================
This BETA release of Bacula 2.5.x development code uses libtool
to generate the Bacula libraries as shared objects rather than
being directly linked in as in prior versions.  This means that
the Bacula shared objects, must either be in a shared object 
directory known to the loader or they must be in the directory
that may be specified on the ./configure line using the
--libdir option as:

  ./configure --libdir=/full-path/dir

the default /lib. If --libdir is specified, there should be
no need to modify your loader configuration provided that
the shared objects are installed in that directory (Bacula
does this with the make install command). The shared objects 
that Bacula references are:

libbaccfg.so
libbacfind.so
libbacpy.so
libbac.so

If you have problems with libtool or you wish to use the old 
way of building static libraries, you can do so by disabling 
libtool on the configure command line with:

  ./configure --disable-libtool
==============================================================

This release includes large number of new features and changes.
It should be more or less compatible with previous xx.conf files
and File daemons providing that you are not using any of the new
features.