@@ -1,7 +1,11 @@
 # List of source files containing translatable strings.
 # To generate this file, type 'make gen-potfiles'
-./patches/testing/resubst.c
-./patches/testing/bregsed.c
+./src/plugins/sd/plugin-sd.c
+./src/plugins/sd/main.c
+./src/plugins/sd/example-plugin-sd.c
+./src/plugins/fd/example-plugin-fd.c
+./src/plugins/fd/bpipe-fd.c
+./src/plugins/dir/example-plugin-dir.c
 ./src/dird/next_vol.c
 ./src/dird/fd_cmds.c
 ./src/dird/ua_label.c
@@ -10,21 +14,22 @@
 ./src/dird/run_conf.c
 ./src/dird/scheduler.c
 ./src/dird/catreq.c
+./src/dird/dir_plugins.c
 ./src/dird/msgchan.c
-./src/dird/ua_acl.c
 ./src/dird/ua_input.c
+./src/dird/ua_acl.c
 ./src/dird/ua_output.c
 ./src/dird/getmsg.c
 ./src/dird/migrate.c
 ./src/dird/ua_query.c
-./src/dird/ua_select.c
 ./src/dird/verify.c
+./src/dird/ua_select.c
 ./src/dird/ua_purge.c
-./src/dird/ua_restore.c
 ./src/dird/ua_status.c
-./src/dird/newvol.c
-./src/dird/mountreq.c
+./src/dird/ua_restore.c
 ./src/dird/job.c
+./src/dird/mountreq.c
+./src/dird/newvol.c
 ./src/dird/ua_cmds.c
 ./src/dird/inc_conf.c
 ./src/dird/authenticate.c
@@ -43,18 +48,21 @@
 ./src/dird/ua_run.c
 ./src/dird/jobq.c
 ./src/dird/ua_server.c
-./src/filed/heartbeat.c
+./src/dird/vbackup.c
 ./src/filed/acl.c
+./src/filed/heartbeat.c
 ./src/filed/verify.c
 ./src/filed/backup.c
 ./src/filed/job.c
 ./src/filed/estimate.c
 ./src/filed/authenticate.c
+./src/filed/status.c
 ./src/filed/restore.c
 ./src/filed/filed.c
-./src/filed/status.c
 ./src/filed/verify_vol.c
+./src/filed/accurate.c
 ./src/filed/filed_conf.c
+./src/filed/fd_plugins.c
 ./src/filed/pythonfd.c
 ./src/gnome2-console/interface.c
 ./src/gnome2-console/console.c
@@ -63,9 +71,10 @@
 ./src/gnome2-console/authenticate.c
 ./src/gnome2-console/callbacks.c
 ./src/gnome2-console/restore.c
+./src/cats/dbi.c
 ./src/cats/sql.c
-./src/cats/sql_update.c
 ./src/cats/sqlite.c
+./src/cats/sql_update.c
 ./src/cats/bdb_find.c
 ./src/cats/sql_find.c
 ./src/cats/mysql.c
@@ -92,14 +101,14 @@
 ./src/stored/pythonsd.c
 ./src/stored/ebcdic.c
 ./src/stored/read_record.c
-./src/stored/read.c
 ./src/stored/reserve.c
-./src/stored/bcopy.c
+./src/stored/read.c
 ./src/stored/bextract.c
+./src/stored/bcopy.c
 ./src/stored/dvd.c
 ./src/stored/label.c
-./src/stored/parse_bsr.c
 ./src/stored/bls.c
+./src/stored/parse_bsr.c
 ./src/stored/status.c
 ./src/stored/bscan.c
 ./src/stored/lock.c
@@ -110,12 +119,14 @@
 ./src/stored/mount.c
 ./src/stored/dircmd.c
 ./src/stored/append.c
+./src/stored/sd_plugins.c
 ./src/stored/job.c
 ./src/stored/askdir.c
 ./src/stored/dev.c
 ./src/stored/authenticate.c
 ./src/stored/record.c
 ./src/stored/butil.c
+./src/stored/vtape.c
 ./src/stored/scan.c
 ./src/stored/acquire.c
 ./src/stored/ansi_label.c
@@ -125,6 +136,7 @@
 ./src/tools/bregtest.c
 ./src/tools/testfind.c
 ./src/tools/bwild.c
+./src/tools/smtp-orig.c
 ./src/tools/bbatch.c
 ./src/tools/dbcheck.c
 ./src/tools/gigaslam.c
@@ -144,31 +156,29 @@
 ./src/tray-monitor/tray_conf.c
 ./src/lib/btime.c
 ./src/lib/workq.c
-./src/lib/uid_gid_name.c
 ./src/lib/cram-md5.c
 ./src/lib/mem_pool.c
 ./src/lib/hmac.c
-./src/lib/bregex.c
 ./src/lib/crc32.c
+./src/lib/bregex.c
 ./src/lib/util.c
 ./src/lib/dlist.c
 ./src/lib/message.c
 ./src/lib/md5.c
 ./src/lib/berrno.c
 ./src/lib/bnet.c
+./src/lib/guid_to_name.c
 ./src/lib/htable.c
 ./src/lib/bpipe.c
 ./src/lib/tree.c
 ./src/lib/watchdog.c
 ./src/lib/bsock.c
-./src/lib/bsnprintf.c
 ./src/lib/btimers.c
+./src/lib/bsnprintf.c
 ./src/lib/pythonlib.c
-./src/lib/enh_fnmatch.c
 ./src/lib/attr.c
 ./src/lib/jcr.c
 ./src/lib/parse_conf.c
-./src/lib/idcache.c
 ./src/lib/scan.c
 ./src/lib/res.c
 ./src/lib/sha1.c
@@ -176,8 +186,8 @@
 ./src/lib/rwlock.c
 ./src/lib/daemon.c
 ./src/lib/alist.c
-./src/lib/breg.c
 ./src/lib/serial.c
+./src/lib/breg.c
 ./src/lib/tls.c
 ./src/lib/signal.c
 ./src/lib/bnet_server.c
@@ -185,9 +195,10 @@
 ./src/lib/fnmatch.c
 ./src/lib/bsys.c
 ./src/lib/crypto.c
+./src/lib/plugins.c
 ./src/lib/openssl.c
-./src/lib/queue.c
 ./src/lib/base64.c
+./src/lib/queue.c
 ./src/lib/edit.c
 ./src/lib/bget_msg.c
 ./src/lib/lex.c
@@ -196,28 +207,40 @@
 ./src/lib/address_conf.c
 ./src/findlib/create_file.c
 ./src/findlib/attribs.c
-./src/findlib/save-cwd.c
 ./src/findlib/fstype.c
 ./src/findlib/drivetype.c
 ./src/findlib/find.c
-./src/findlib/find_one.c
 ./src/findlib/bfile.c
+./src/findlib/find_one.c
+./src/findlib/mkpath.c
 ./src/findlib/enable_priv.c
-./src/findlib/makepath.c
+./src/findlib/savecwd.c
 ./src/findlib/match.c
+./patches/testing/justdisk.c
+./patches/testing/mtops.c
+./patches/testing/t.c
+./patches/testing/bregsed.c
+./patches/testing/hash.c
+./patches/testing/resubst.c
 ./platforms/freebsd/tapetest.c
+./src/plugins/sd/plugin-sd.h
 ./src/dird/jobq.h
 ./src/dird/ua.h
+./src/dird/dir_plugins.h
 ./src/dird/dird.h
 ./src/dird/protos.h
 ./src/dird/bsr.h
 ./src/dird/dird_conf.h
+./src/filed/fd_plugins.h
 ./src/filed/acl.h
 ./src/filed/filed.h
 ./src/filed/protos.h
 ./src/filed/filed_conf.h
 ./src/qt-console/label/label.h
 ./src/qt-console/select/select.h
+./src/qt-console/status/clientstat.h
+./src/qt-console/status/dirstat.h
+./src/qt-console/status/storstat.h
 ./src/qt-console/fileset/fileset.h
 ./src/qt-console/bcomm/dircomm.h
 ./src/qt-console/clients/clients.h
@@ -234,9 +257,12 @@
 ./src/qt-console/testprogs/examp/mainwindow.h
 ./src/qt-console/jobs/jobs.h
 ./src/qt-console/console/console.h
+./src/qt-console/win32/qplatformdefs.h
 ./src/qt-console/run/run.h
 ./src/qt-console/joblist/joblist.h
 ./src/qt-console/relabel/relabel.h
+./src/qt-console/util/fmtwidgetitem.h
+./src/qt-console/util/comboutil.h
 ./src/qt-console/mainwin.h
 ./src/qt-console/pages.h
 ./src/qt-console/bat.h
@@ -270,8 +296,10 @@
 ./src/stored/stored_conf.h
 ./src/stored/reserve.h
 ./src/stored/lock.h
+./src/stored/sd_plugins.h
 ./src/stored/dev.h
 ./src/stored/record.h
+./src/stored/vtape.h
 ./src/stored/bsr.h
 ./src/stored/protos.h
 ./src/console/func.h
@@ -293,8 +321,8 @@
 ./src/win32/compat/sys/socket.h
 ./src/win32/compat/strings.h
 ./src/win32/compat/pwd.h
-./src/win32/compat/alloca.h
 ./src/win32/compat/winhost.h
+./src/win32/compat/alloca.h
 ./src/win32/compat/netdb.h
 ./src/win32/compat/getopt.h
 ./src/win32/compat/stdint.h
@@ -307,10 +335,10 @@
 ./src/win32/compat/compat.h
 ./src/win32/compat/winconfig.h
 ./src/win32/compat/dirent.h
+./src/win32/compat/dlfcn.h
 ./src/win32/compat/grp.h
 ./src/win32/libwin32/res.h
 ./src/win32/libwin32/aboutDialog.h
-./src/win32/libwin32/wintray.h
 ./src/win32/libwin32/win32.h
 ./src/win32/libwin32/statusDialog.h
 ./src/win32/libwin32/protos.h
@@ -320,8 +348,8 @@
 ./src/tray-monitor/tray-monitor.h
 ./src/tray-monitor/tray_conf.h
 ./src/lib/runscript.h
-./src/lib/address_conf.h
 ./src/lib/tcpd.h
+./src/lib/address_conf.h
 ./src/lib/btime.h
 ./src/lib/bits.h
 ./src/lib/workq.h
@@ -332,13 +360,14 @@
 ./src/lib/md5.h
 ./src/lib/waitq.h
 ./src/lib/berrno.h
-./src/lib/htable.h
-./src/lib/bpipe.h
+./src/lib/guid_to_name.h
 ./src/lib/tree.h
+./src/lib/bpipe.h
+./src/lib/htable.h
 ./src/lib/watchdog.h
 ./src/lib/bsock.h
 ./src/lib/btimers.h
-./src/lib/enh_fnmatch.h
+./src/lib/pythonlib.h
 ./src/lib/attr.h
 ./src/lib/parse_conf.h
 ./src/lib/protos.h
@@ -348,22 +377,24 @@
 ./src/lib/alist.h
 ./src/lib/breg.h
 ./src/lib/serial.h
+./src/lib/status.h
 ./src/lib/tls.h
 ./src/lib/lib.h
 ./src/lib/smartall.h
 ./src/lib/fnmatch.h
 ./src/lib/crypto.h
+./src/lib/plugins.h
 ./src/lib/openssl.h
-./src/lib/queue.h
 ./src/lib/base64.h
+./src/lib/queue.h
 ./src/lib/lex.h
 ./src/lib/var.h
-./src/findlib/save-cwd.h
+./src/findlib/savecwd.h
 ./src/findlib/find.h
 ./src/findlib/bfile.h
 ./src/findlib/protos.h
-./src/bc_types.h
 ./src/baconfig.h
+./src/bc_types.h
 ./src/jcr.h
 ./src/version.h
 ./src/bacula.h
@@ -373,6 +404,9 @@
 ./autoconf/confdefs.h
 ./src/qt-console/label/label.cpp
 ./src/qt-console/select/select.cpp
+./src/qt-console/status/storstat.cpp
+./src/qt-console/status/clientstat.cpp
+./src/qt-console/status/dirstat.cpp
 ./src/qt-console/fileset/fileset.cpp
 ./src/qt-console/bcomm/dircomm.cpp
 ./src/qt-console/bcomm/dircomm_auth.cpp
@@ -401,6 +435,8 @@
 ./src/qt-console/run/estimate.cpp
 ./src/qt-console/joblist/joblist.cpp
 ./src/qt-console/relabel/relabel.cpp
+./src/qt-console/util/fmtwidgetitem.cpp
+./src/qt-console/util/comboutil.cpp
 ./src/qt-console/pages.cpp
 ./src/qt-console/bat_conf.cpp
 ./src/qt-console/qstd.cpp
