@@ -50,6 +50,7 @@ libtool on the configure command line with:
 
 
 General:
+Beta version 2.5.16 release:
 20Oct08
 ebl  Rename JobStat table to JobHistory
 19Oct08
